--- a/style.css
+++ b/style.css
@@ -334,6 +334,16 @@ a {
 
 
 @media only screen and (max-width: 600px) {
+    #namefor {
+        font-family: cursive;
+        color: rgba(140, 13, 13, 0.71);
+        font-size: 100px;
+        margin-top: 0px;
+        text-align: center;
+        border-radius: .5px;
+        margin-bottom: 15px;
+    }
+
     #logo-fit{
         margin-left: 100px;
     }
